# ChangeLog for dev-embedded/ponyprog
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-embedded/ponyprog/ChangeLog,v 1.17 2009/06/28 13:44:06 maekke Exp $

  28 Jun 2009; Markus Meier <maekke@gentoo.org> ponyprog-2.07a.ebuild:
  amd64/x86 stable, bug #274785

  20 Jun 2009; Mike Frysinger <vapier@gentoo.org> ponyprog-2.07a.ebuild,
  files/ponyprog-2.07a-gcc43.patch:
  Fix up build errors with fortify source #264395 by Diego E. Pettenò.

  05 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

  20 Jun 2008; Denis Dupeyron <calchan@gentoo.org>
  +files/ponyprog-2.07a-gcc43.patch, ponyprog-2.07a.ebuild:
  Fixed compilation with gcc 4.3, thanks to Peter Alfredsen (bug #227503).

  29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> ponyprog-2.07a.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.

  27 Aug 2007; Christoph Mende <angelos@gentoo.org> ponyprog-2.07a.ebuild:
  Added ~amd64 wrt bug #187146

  22 Jul 2007; Denis Dupeyron <calchan@gentoo.org> ponyprog-2.06c.ebuild:
  Removed virtual/x11 (obsolete) and sys-libs/glibc (implicit) dependencies.

*ponyprog-2.07a (19 May 2007)

  19 May 2007; Denis Dupeyron <calchan@gentoo.org> +ponyprog-2.07a.ebuild:
  Version bump. Fixes bug #147457 (thanks to Daniel Glaser). Now builds from
  source.

  13 Apr 2007; Denis Dupeyron <calchan@gentoo.org> ponyprog-2.06c.ebuild:
  Fixed bug #173884.

  28 Jan 2007; Marius Mauch <genone@gentoo.org> ponyprog-2.06c.ebuild:
  Replacing einfo with elog

  16 Mar 2006; Caleb Tennis <caleb@gentoo.org> ponyprog-2.06c.ebuild:
  Migrate to modular X dep

  29 Jun 2004; Aron Griffis <agriffis@gentoo.org> ponyprog-2.06c.ebuild:
  trim trailing whitespace

  07 May 2004; Daniel Black <dragonheart@gentoo.org> ponyprog-2.06c.ebuild:
  Addex x86 Keyword

  30 Mar 2004; Donnie Berkholz <spyderous@gentoo.org>; ponyprog-2.06c.ebuild: