@@ -3,13 +3,13 @@ Hash: SHA1
 
 AUX ponyprog-2.07a-gcc43.patch 1397 RMD160 a52c4b174e1153ac460835a70142d5455c61a6a1 SHA1 a94b03da2e520e6f8f66f7ef4e91702be73d038c SHA256 01f343ae01fe0fca6979318f933d8faf7cd1942beaa859b2c29dc655e808c08f
 DIST PonyProg2000-2.07a.tar.gz 680770 RMD160 b9604e23c5e7dd703a80688dff425b59e72e6e14 SHA1 60094c996c7956bee81e5dec06445e8760bb4e35 SHA256 6398fcbe15a0ea93f6f38a3ad7299f5b46ba09d2f97050f386e27f19a3283436
-EBUILD ponyprog-2.07a.ebuild 2143 RMD160 0dcd27272e6c2485e6ef4b0df5470e8b2661aadb SHA1 7d1d8900ce0d92e64b5468acfb4a87a6854ea8a8 SHA256 b8b5fa9054fc608a767e6503ddf7e674a56131de5b6e0bc461bcfe4b441bbc8c
-MISC ChangeLog 2218 RMD160 b818cb2b8ce594c5521fa6bc545d0eb817179af6 SHA1 4c8fe7f00ca493a5dcb7c94bbcc0ea1098adb81c SHA256 2f0ed0d632ab902d6a0006f7a5487464f9a661b00c8ddd661d7dbf603c39311a
+EBUILD ponyprog-2.07a.ebuild 2213 RMD160 1ba300c7b5421e1ad0b7d5a10472b081b72b7999 SHA1 9d64ed10dbb16f587c20ed104793e9f1b23e2a96 SHA256 1eb965eb18c6354e760735524b972745da7d07549df05b6eff9592b2cfe8717a
+MISC ChangeLog 2340 RMD160 fd4e4cc9e7afd1f14b0e578a655c909808e98dc7 SHA1 002365a9e972d6877c3a55489724b7b1be7c4a71 SHA256 01efdb12d7abea7d91c22895477429e9e56433dd08e34465fed3a861308e0c3f
 MISC metadata.xml 382 RMD160 e6bbce500b6f5e7d4476a6abae45403275e7a20b SHA1 eb550361c0bf337db4074b5f44c9fd463bcaec59 SHA256 aaedb0b1e1bb1093f7e221f35e25af1d263cbfb16d8cf108568902119ba9e22c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.12 (GNU/Linux)
+Version: GnuPG v2.0.13 (GNU/Linux)
 
-iEYEARECAAYFAkpHnmgACgkQlPl3HsVfCDrHSQCeJgGlvw48sXMvBWWQ4LKm5um8
-TKYAn0IPdmCHBTUaUW9rh2K7cez9Ltvs
-=g1+q
+iEYEARECAAYFAksLqAMACgkQAiZjviIA2XgPtQCdF/sOkaWLi2woWbY0gb0Fbsl/
+nIcAoOzCsMg+oQsa/iDtOC7CBGi9tqvH
+=xaU3
 -----END PGP SIGNATURE-----
