@@ -1,6 +1,10 @@
 # ChangeLog for dev-embedded/ponyprog
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-embedded/ponyprog/ChangeLog,v 1.17 2009/06/28 13:44:06 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-embedded/ponyprog/ChangeLog,v 1.18 2009/11/24 09:31:41 flameeyes Exp $
+
+  24 Nov 2009; Diego E. Pettenò <flameeyes@gentoo.org>
+  ponyprog-2.07a.ebuild:
+  Force serial make per bug #282244.
 
   28 Jun 2009; Markus Meier <maekke@gentoo.org> ponyprog-2.07a.ebuild:
   amd64/x86 stable, bug #274785
